# legifrance-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  run-examples.yml
examples/: ceseda-oneshot.sh  ceseda.sh  jorf.sh
src/: api.rs  dilapi.rs  dilarxiv-oneshot.rs  dilarxiv.rs  dumps.rs  lib.rs  tarballs.rs
src/api/: client.rs  piste.rs
src/dumps/: extractor.rs  fonds.rs  tarballs.rs
