[package]
name = "legifrance-rs"
version = "0.0.1"
edition = "2024"
description = "Command line interface for Dila Open Datasets and API"
license = "GPL-3.0-or-later"

# add binary
[[bin]]
name = "dilarxiv"
path = "src/dilarxiv.rs"

[[bin]]
name = "dilapi"
path = "src/dilapi.rs"

[[bin]]
name = "dilarxiv-oneshot"
path = "src/dilarxiv-oneshot.rs"

[lib]
name = "legifrance"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
crossbeam-channel = "0.5.15"
csv = "1.3.1"
env_logger = "0.11.7"
flate2 = "1.1.1"
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["tokio", "futures"] }
log = "0.4.27"
once_cell = "1.21.3"
quick-xml = { version = "0.37.5", features = ["serde"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tantivy = "0.22.0"
tar = "0.4.44"
temp-dir = "0.1.16"
tokio = { version = "1.44.1", features = ["full"] }


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dev-dependencies]
wiremock = "0.6.3"
